Fixed header alignment and centered content

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -5,99 +5,111 @@
 	justify-content: flex-start
 	width: 100%
 
-	.navContainer
-		width: 100%
-		margin: 0 auto
-		padding-bottom: 10px
-		display: flex
-		justify-content: space-around
-		align-items: center
-		border-bottom: 1px solid #ebebeb
-		@media(max-width: 920px)
-			justify-content: center
-		@media(max-width: 700px)
-			justify-content: flex-start
+.navMenu
+	border-bottom: 1px solid #ebebeb
 
-		.logo
-			align-self: flex-end
-			@media(max-width: 920px)
-				display: none
-
-		.startContestBtn
-			text-align: center
-			max-width: 340px
-			padding: 10px 22px
-			border: 2px solid #28d2d0
-			color: #28d2d0
-			border-radius: 5px
-			font-size: 14px
-			font-weight: 400
-			margin-bottom: 10px
-
-			&:hover
-				color: white
-				background-color: #28d2d0
-
-		.leftNav
-			display: flex
-			@media(max-width: 750px)
-				align-items: center
-				flex-direction: column
-
-	.loginSignnUpHeaders
-		margin-top: 30px
-		display: flex
-		flex-direction: row
-		align-items: center
-		justify-content: space-around
-		border: 1px solid #ebebeb
-		margin-bottom: 13px
-
-		.numberContainer
-			text-decoration: none
-			color: inherit
-			display: flex
-			justify-content: center
-			align-items: center
-			padding: 0 15px
-			border-right: 1px solid #ebebeb
-			border-left: 1px solid #ebebeb
-			margin-left: 120px
-			height: 40px
-			@media(max-width: 600px)
-				margin-left: 10px
-			@media(max-width: 360px)
-				padding: 0 5px
-				margin-left: 0
-
-			span
-				color: #337ab7
-				font-size: 14px
-				margin-left: 10px
-				@media(max-width: 360px)
-					font-size: 12px
-
-	.fixedHeader
-		z-index: 500
-		display: flex
+.navContainer
+	box-sizing: border-box
+	max-width: 1170px
+	width: 100%
+	padding: 0 15px
+	margin: 7px auto
+	display: flex
+	justify-content: space-between
+	align-items: center
+	@media(max-width: 920px)
 		justify-content: center
+	@media(max-width: 700px)
+		justify-content: flex-start
+
+.logo
+	align-self: flex-end
+	@media(max-width: 920px)
+		display: none
+
+.startContestBtn
+	box-sizing: border-box
+	display: flex
+	align-items: center
+	justify-content: center
+	width: 160px
+	padding: 10px 22px
+	border: 2px solid #28d2d0
+	color: #28d2d0
+	border-radius: 5px
+	font-size: 14px
+	font-weight: 400
+	margin-left: 30px
+	cursor: pointer
+
+	&:hover
+		color: white
+		background-color: #28d2d0
+
+.leftNav
+	display: flex
+	@media(max-width: 750px)
 		align-items: center
-		width: 100%
-		position: fixed
-		background-color: rgb(69, 90, 137)
-		border-bottom: 3px solid rgb(255, 255, 255)
-		height: 30px
+		flex-direction: column
 
-		.info
-			font-size: 8pt
-			letter-spacing: 0.3px
-			color: white
-			margin-right: 4px
-			@media(max-width: 600px)
-				display: none
+.loginSignnUpHeaders
+	border-bottom: 1px solid #ebebeb
 
-		a
-			font-size: 8pt
-			letter-spacing: 0.3px
-			color: lightyellow
-			text-decoration: none
+.loginSignUpHearersContainer
+	flex-direction: row
+	box-sizing: border-box
+	margin: 30px auto 0
+	padding: 0 15px
+	align-items: center
+	display: flex
+	width: 100%
+	max-width: 1170px
+	justify-content: space-between
+
+.numberContainer
+	text-decoration: none
+	color: inherit
+	display: flex
+	justify-content: center
+	align-items: center
+	padding: 0 15px
+	border-right: 1px solid #ebebeb
+	border-left: 1px solid #ebebeb
+
+	height: 40px
+	@media(max-width: 600px)
+		margin-left: 10px
+	@media(max-width: 360px)
+		padding: 0 5px
+		margin-left: 0
+
+.tel
+	color: #337ab7
+	font-size: 14px
+	margin-left: 10px
+	@media(max-width: 360px)
+		font-size: 12px
+
+.fixedHeader
+	z-index: 500
+	display: flex
+	justify-content: center
+	align-items: center
+	width: 100%
+	position: fixed
+	background-color: rgb(69, 90, 137)
+	height: 30px
+
+.info
+	font-size: 8pt
+	letter-spacing: 0.3px
+	color: white
+	margin-right: 4px
+	@media(max-width: 600px)
+		display: none
+
+.infoLink
+	font-size: 8pt
+	letter-spacing: 0.3px
+	color: lightyellow
+	text-decoration: none
