--- a/client/src/components/Header/MainMenu/MainMenu.module.sass
+++ b/client/src/components/Header/MainMenu/MainMenu.module.sass
@@ -26,7 +26,7 @@
 	display: flex
 	align-items: center
 	justify-content: flex-start
-	margin-right: 30px
+	margin-left: 30px
 
 	@media(max-width: 700px)
 		width: 100%
