--- a/client/src/components/Header/UserMenu/RenderLoginButtons/RenderLoginButtons.module.sass
+++ b/client/src/components/Header/UserMenu/RenderLoginButtons/RenderLoginButtons.module.sass
@@ -24,7 +24,8 @@
 	border-radius: 10px
 
 .emailIcon
-	padding: 0 15px
+	padding: 13px 15px
+	cursor: pointer
 	border-right: 1px solid #ebebeb
 
 .userName
@@ -36,7 +37,6 @@
 	font-size: 16px
 
 .userButtonsContainer
-	margin-left: 100px
 	align-items: center
 	justify-content: center
 	display: flex
@@ -53,7 +53,7 @@
 		margin-left: 0
 
 .authBtn
-	padding: 0 15px
+	padding: 15px
 	color: #718888
 	font-weight: 400
 	font-size: 14px
